# DBIS_Lab1_NoMS

./: .gitignore  CMakeLists.txt  README.md  main.cpp  task.txt  test.md  test.txt
Film/: Film.cpp  Film.fl  Film.h
Handlers/: handlers.h  helpers.cpp  insert.cpp
Helpers/: helpers.cpp  helpers.h
Studio/: Studio.cpp  Studio.fl  Studio.h
Studio/IndexTable/: Index.cpp  Index.h  Studio.ind
docs/: умова.doc
